# safe-cli

./: .gitignore  Contributing.md  License  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/safe_cli/: __init__.py  cli.py
src/safe_cli/core/: __init__.py  analyzer.py  executor.py  parser.py  suggestion.py
src/safe_cli/rules/: __init__.py  base.py  docker.py  filesystem.py  git.py  registry.py  system.py
src/safe_cli/ui/: __init__.py  display.py  prompts.py
src/safe_cli/utils/: __init__.py  constants.py
tests/: test_analyzer.py  test_cli.py  test_constants.py  test_display.py  test_docker_rules.py  test_executor.py  test_git_rules.py  test_parser.py  test_prompts.py  test_registry.py  test_suggestion.py  test_system_rules.py
