[tool.poetry]
name = "safectl"
version = "0.1.0"
description = "Know before you run - A safety wrapper for dangerous shell commands"
authors = ["Njau-dev <jeffnjau01@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Njau-dev/safe-cli"
repository = "https://github.com/Njau-dev/safe-cli"
keywords = ["cli", "safety", "shell", "commands", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
packages = [{ include = "safe_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.0"
rich = "^13.7.0"
click = "^8.1.0"
questionary = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
safectl = "safe_cli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/safe_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
]
